src/br/ufmg/compiler/L2017_1Parser.java
// Generated from /home/hendrix/Desktop/L2017_1.g4 by ANTLR 4.1
package br.ufmg.compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class L2017_1Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__43=1, T__42=2, T__41=3, T__40=4, T__39=5, T__38=6, T__37=7, T__36=8, 
		T__35=9, T__34=10, T__33=11, T__32=12, T__31=13, T__30=14, T__29=15, T__28=16, 
		T__27=17, T__26=18, T__25=19, T__24=20, T__23=21, T__22=22, T__21=23, 
		T__20=24, T__19=25, T__18=26, T__17=27, T__16=28, T__15=29, T__14=30, 
		T__13=31, T__12=32, T__11=33, T__10=34, T__9=35, T__8=36, T__7=37, T__6=38, 
		T__5=39, T__4=40, T__3=41, T__2=42, T__1=43, T__0=44, WS=45, COMMENT=46, 
		LINE_COMMENT=47, Digit=48, Identifier=49, UNICODE_CHAR=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'read'", "'−'", "'E'", "','", "'MOD'", "'-'", "'or'", "'*'", 
		"'('", "':'", "'if'", "'program'", "'<'", "'false'", "'!='", "'<='", "'until'", 
		"'write'", "'''", "'else'", "'boolean'", "'true'", "'char'", "'AND'", 
		"')'", "'.'", "'procedure'", "'+'", "'value'", "'='", "'reference'", "';'", 
		"'repeat'", "'div'", "'>'", "':='", "'integer'", "'begin'", "'then'", 
		"'/'", "'>='", "'end'", "'NOT'", "'real'", "WS", "COMMENT", "LINE_COMMENT", 
		"Digit", "Identifier", "UNICODE_CHAR"
	};
	public static final int
		RULE_identifier = 0, RULE_relop = 1, RULE_addop = 2, RULE_mulop = 3, RULE_program = 4, 
		RULE_decl_list = 5, RULE_decl = 6, RULE_dcl_var = 7, RULE_ident_list = 8, 
		RULE_type = 9, RULE_dcl_proc = 10, RULE_tipo_retornado = 11, RULE_corpo = 12, 
		RULE_id_return = 13, RULE_espec_parametros = 14, RULE_lista_parametros = 15, 
		RULE_parametro = 16, RULE_modo = 17, RULE_compound_stmt = 18, RULE_stmt_list = 19, 
		RULE_stmt = 20, RULE_assign_stmt = 21, RULE_if_stmt = 22, RULE_cond = 23, 
		RULE_repeat_stmt = 24, RULE_read_stmt = 25, RULE_write_stmt = 26, RULE_expr_list = 27, 
		RULE_expr = 28, RULE_simple_expr = 29, RULE_term = 30, RULE_factor_a = 31, 
		RULE_factor = 32, RULE_function_ref_par = 33, RULE_variable = 34, RULE_simple_variable_or_proc = 35, 
		RULE_constant = 36, RULE_boolean_constant = 37, RULE_unsigned_integer = 38, 
		RULE_sign = 39, RULE_scale_factor = 40, RULE_unsigned_real = 41, RULE_integer_constant = 42, 
		RULE_real_constant = 43, RULE_char_constant = 44, RULE_goal = 45;
	public static final String[] ruleNames = {
		"identifier", "relop", "addop", "mulop", "program", "decl_list", "decl", 
		"dcl_var", "ident_list", "type", "dcl_proc", "tipo_retornado", "corpo", 
		"id_return", "espec_parametros", "lista_parametros", "parametro", "modo", 
		"compound_stmt", "stmt_list", "stmt", "assign_stmt", "if_stmt", "cond", 
		"repeat_stmt", "read_stmt", "write_stmt", "expr_list", "expr", "simple_expr", 
		"term", "factor_a", "factor", "function_ref_par", "variable", "simple_variable_or_proc", 
		"constant", "boolean_constant", "unsigned_integer", "sign", "scale_factor", 
		"unsigned_real", "integer_constant", "real_constant", "char_constant", 
		"goal"
	};

	@Override
	public String getGrammarFileName() { return "L2017_1.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public L2017_1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(L2017_1Parser.Identifier, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelopContext extends ParserRuleContext {
		public RelopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterRelop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitRelop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitRelop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelopContext relop() throws RecognitionException {
		RelopContext _localctx = new RelopContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_relop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 13) | (1L << 15) | (1L << 16) | (1L << 30) | (1L << 35) | (1L << 41))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddopContext extends ParserRuleContext {
		public AddopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterAddop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitAddop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitAddop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddopContext addop() throws RecognitionException {
		AddopContext _localctx = new AddopContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_addop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 7) | (1L << 28))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulopContext extends ParserRuleContext {
		public MulopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterMulop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitMulop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitMulop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MulopContext mulop() throws RecognitionException {
		MulopContext _localctx = new MulopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mulop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 8) | (1L << 24) | (1L << 34) | (1L << 40))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public Decl_listContext decl_list() {
			return getRuleContext(Decl_listContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(12);
			setState(101); identifier();
			setState(102); match(32);
			setState(103); decl_list();
			setState(104); compound_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_listContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public Decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterDecl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitDecl_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitDecl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decl_listContext decl_list() throws RecognitionException {
		Decl_listContext _localctx = new Decl_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decl_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106); decl();
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(107); match(32);
					setState(108); decl();
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Dcl_procContext dcl_proc() {
			return getRuleContext(Dcl_procContext.class,0);
		}
		public Dcl_varContext dcl_var() {
			return getRuleContext(Dcl_varContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decl);
		try {
			setState(116);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(114); dcl_var();
				}
				break;
			case 21:
			case 23:
			case 27:
			case 37:
			case 44:
				enterOuterAlt(_localctx, 2);
				{
				setState(115); dcl_proc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dcl_varContext extends ParserRuleContext {
		public Ident_listContext ident_list() {
			return getRuleContext(Ident_listContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Dcl_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterDcl_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitDcl_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitDcl_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dcl_varContext dcl_var() throws RecognitionException {
		Dcl_varContext _localctx = new Dcl_varContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dcl_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); ident_list();
			setState(119); match(10);
			setState(120); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ident_listContext extends ParserRuleContext {
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public Ident_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterIdent_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitIdent_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitIdent_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ident_listContext ident_list() throws RecognitionException {
		Ident_listContext _localctx = new Ident_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ident_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); identifier();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(123); match(4);
				setState(124); identifier();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 21) | (1L << 23) | (1L << 37) | (1L << 44))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dcl_procContext extends ParserRuleContext {
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public Espec_parametrosContext espec_parametros() {
			return getRuleContext(Espec_parametrosContext.class,0);
		}
		public Tipo_retornadoContext tipo_retornado() {
			return getRuleContext(Tipo_retornadoContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Dcl_procContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl_proc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterDcl_proc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitDcl_proc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitDcl_proc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dcl_procContext dcl_proc() throws RecognitionException {
		Dcl_procContext _localctx = new Dcl_procContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dcl_proc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); tipo_retornado();
			setState(133); match(27);
			setState(134); identifier();
			setState(135); espec_parametros();
			setState(136); corpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_retornadoContext extends ParserRuleContext {
		public Tipo_retornadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_retornado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterTipo_retornado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitTipo_retornado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitTipo_retornado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_retornadoContext tipo_retornado() throws RecognitionException {
		Tipo_retornadoContext _localctx = new Tipo_retornadoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_tipo_retornado);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 21) | (1L << 23) | (1L << 37) | (1L << 44))) != 0)) {
				{
				setState(138);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 21) | (1L << 23) | (1L << 37) | (1L << 44))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoContext extends ParserRuleContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public Id_returnContext id_return() {
			return getRuleContext(Id_returnContext.class,0);
		}
		public Decl_listContext decl_list() {
			return getRuleContext(Decl_listContext.class,0);
		}
		public CorpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterCorpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitCorpo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitCorpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CorpoContext corpo() throws RecognitionException {
		CorpoContext _localctx = new CorpoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_corpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if (_la==10) {
				{
				setState(141); match(10);
				setState(142); decl_list();
				setState(143); match(32);
				setState(144); compound_stmt();
				setState(145); id_return();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_returnContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Id_returnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterId_return(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitId_return(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitId_return(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_returnContext id_return() throws RecognitionException {
		Id_returnContext _localctx = new Id_returnContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_id_return);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(149); identifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Espec_parametrosContext extends ParserRuleContext {
		public Lista_parametrosContext lista_parametros() {
			return getRuleContext(Lista_parametrosContext.class,0);
		}
		public Espec_parametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_espec_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).enterEspec_parametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof L2017_1Listener ) ((L2017_1Listener)listener).exitEspec_parametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof L2017_1Visitor ) return ((L2017_1Visitor<? extends T>)visitor).visitEspec_parametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Espec_parametrosContext espec_parametros() throws RecognitionException {
		Espec_parametrosContext _localctx = new Espec_parametrosContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_espec_parametros);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(9);
			setState(153); lista_parametros(0);
			setState(154); match(25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
